Fixed profile name alignment #22866338780651

--- a/css/partials/_organisms.scss
+++ b/css/partials/_organisms.scss
@@ -971,8 +971,11 @@
 // profile name
 
 .profile-name {
+	margin-top: $gutterwidth;
+
 	h1 {
 		margin-bottom: 0;
+		text-align: center;
 	}
 }
 
